# pocketcloset

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/fz/pocketcloset/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/fz/pocketcloset/: AddClothesAdapter.java  AddClothesFragment.java  AddCollectionFragment.java  ClothesFragment.java  ClothingAdapter.java  ClothingDetailFragment.java  ClothingItem.java  ClothingManager.java  Collection.java  CollectionAdapter.java  CollectionDetailFragment.java  CollectionsFragment.java  CollectionsManager.java  DatabaseHelper.java  ImagePickerHelper.java  MainActivity.java  (+5 more)
app/src/main/res/anim/: fade_in.xml
app/src/main/res/drawable/: canvas_border.xml  circular_button.xml  tag_background.xml
app/src/main/res/layout/: activity_main.xml  dialog_add_clothes.xml  dialog_create_collection.xml  dialog_edit_collection.xml  fragment_add_clothes.xml  fragment_add_collection.xml  fragment_clothes.xml  fragment_clothing_detail.xml  fragment_collection_detail.xml  fragment_collections.xml  fragment_crop_image.xml  fragment_outfit_creation.xml  fragment_outfits.xml  fragment_selection.xml  inline_tag_editor.xml  item_clothing.xml  item_collection.xml  item_outfit.xml  item_tag.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
sdk/libcxx_helper/: CMakeLists.txt
(+28 files in other folders)
